--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "edgetunnel",
-  "version": "1.0.0",
-  "description": "Delete code, but keep the project for the sake of memories. I'm only create this project for fun, for try new things and for learn by doing. **I'm even not write any outside marketing post for this project. Just for my own fun...** But I feel emotional damage by the community.",
-  "main": "index.js",
+  "name": "vless-proxy-worker",
+  "version": "6.0.0",
+  "description": "Ultimate VLESS Proxy Worker Script for Cloudflare (Merged & Fully Fixed)",
+  "private": true,
+  "main": "src/worker.js",
+  "module": "src/worker.js",
   "scripts": {
-    "deploy": "wrangler publish",
-    "dev-vless": "wrangler dev src/worker-vless.js"
+    "start": "wrangler dev",
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy",
+    "setup:db-create": "wrangler d1 create vless-users-db",
+    "setup:kv-create": "wrangler kv:namespace create USER_KV",
+    "setup:db-init": "wrangler d1 execute vless-users-db --command=\"CREATE TABLE IF NOT EXISTS users (uuid TEXT PRIMARY KEY, created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, expiration_date TEXT NOT NULL, expiration_time TEXT NOT NULL, notes TEXT, data_limit INTEGER DEFAULT 0, data_usage INTEGER DEFAULT 0, ip_limit INTEGER DEFAULT 2);\"",
+    "setup:all": "npm run setup:db-create && npm run setup:kv-create && npm run setup:db-init"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230518.0",
-    "wrangler": "^3.1.0"
-  },
-  "dependencies": {
-    "dns-packet": "^5.6.0",
-    "ip-cidr": "^3.1.0",
-    "ip-range-check": "^0.2.0",
-    "ipaddr.js": "^2.0.1"
+    "wrangler": "^3.0.0"
   }
 }
